#8 Final Version September 14

--- a/layout/css/standard.css
+++ b/layout/css/standard.css
@@ -2,46 +2,34 @@
     margin: 0;
     padding: 0
 }
-html {
-    font-family: Lato, sans-serif;
-    font-weight: 300;
-    background-color: white;
+code {
+    font-size: 24px;
 }
-html,
-body {
-    height: 100%;
-    width: 100%;
-    overflow-x: hidden;
-    margin: 0;
-    padding: 0
+html {
+    background-color: white;
 }
 ::-webkit-scrollbar {
     display: none
 }
 b {
-    font-family: latoregular, sans-serif;
+    font-family: "Lato-Regular";
     font-weight: 500;
 }
-#wrapper {
+body {
+    color: grey;
     width: 100%;
     height: 100%;
     position: relative;
-    color: grey;
-    margin: 0 auto
-}
-.content {
-    width: 70%;
-    height: 100%;
-    position: relative;
-    display: block;
     font-size: 25px;
-    padding: 0% 15%;
-    margin: 0 auto;
+}
+.page {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0 15%;
 }
 .megrim {
-    font-family: Megrim, serif;
-    font-size: 26px;
-    display: inline-block
+    font-family: "Unverschaemt Sans";
+    display: inline-block;
 }
 h1.megrim {
     color: #376e88;
@@ -56,36 +44,50 @@ h1.megrim {
     user-select: none;
 }
 .c1 {
-    color: #375688
+    color: rgba(55, 86, 136, 0.8)
 }
 .c2 {
-    color: #315881
+    color: rgba(49, 88, 129, 0.8)
 }
 .c3 {
-    color: #376e88
+    color: rgba(55, 110, 136, 0.8)
 }
 .c4 {
-    color: #378993
+    color: rgba(55, 137, 147, 0.8)
 }
 .c5 {
-    color: #298080
-}
-.u1 {
-    border-bottom: 2px solid #375688;
+    color: rgba(56, 150, 132, 0.8)
 }
 .u4 {
-    border-bottom: 2px solid #378993;
+    border-bottom: 2px solid rgba(55, 137, 147, 0.8);
+    margin-right: 0px !important;
+}
+.d1 {
+    margin-right: 6px;
+}
+.d2 {
+    line-height: 20px;
+    margin-right: 0px !important;
+    vertical-align: 2px;
 }
 .c1,
 .c2,
 .c3,
 .c4,
 .c5,
-.u1,
-.u1,
-.u4 {
+.u4,
+.d1,
+.d2,
+d3 {
     display: inline;
-    margin-right: 3px;
+}
+.c1,
+.c2,
+.c3,
+.c4,
+.c5,
+.d1 {
+    margin-right: 4px;
 }
 a {
     text-decoration: none;
@@ -94,18 +96,21 @@ a {
 a:hover {
     color: #52525a;
 }
+.u4 {
+    cursor: pointer;
+}
 #aboutme {
     line-height: 21pt;
-    font-family: latolight;
+    font-family: "Lato-Light";
 }
 .text {
     height: auto;
     display: block;
-    padding: 2% 5%
+    padding: 2% 5%;
 }
 .smartNav {
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     margin-bottom: 4px;
     -webkit-transition: all 400ms ease-in-out;
     -moz-transition: all 400ms ease-in-out;
@@ -225,19 +230,17 @@ a:hover {
 }
 @media (max-device-width: 600px),
 (max-width: 600px) {
-    .content {
-        padding: 0% 5%;
-        width: 90%;
+    .page {
+        padding: 0% 2%;
     }
     h1.megrim {
-        font-size: 60px;
+        font-size: 50px;
     }
     .smartNav {
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
     }
     #scrollArrow {
         display: none;
     }
 }
-
