--- a/layout/css/standard.css
+++ b/layout/css/standard.css
@@ -25,6 +25,9 @@ body {
 .page {
     width: 100%;
     box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
     padding: 0 15%;
 }
 .megrim {
