--- a/layout/fonts/fonts.css
+++ b/layout/fonts/fonts.css
@@ -14,7 +14,7 @@
 }
 @font-face {
     font-family: 'Unverschaemt Sans';
-    src: url('unverschaemt_sans.ttf') format('truetype');
+    src: url('unverschaemtSans.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
