--- a/layout/css/standard.css
+++ b/layout/css/standard.css
@@ -3,7 +3,11 @@
     padding: 0
 }
 code {
-    font-size: 24px;
+    font-size: 20px;
+    background-color: rgba(250, 250, 250, 1);
+    padding: 2px 4px;
+    border: 1px solid rgb(180, 180, 180);
+    border-radius: 3px;
 }
 html {
     background-color: white;
