--- a/layout/fonts/fonts.css
+++ b/layout/fonts/fonts.css
@@ -1,1 +1,20 @@
-@font-face{font-family:'Lato-Light';src:url('lato_light_1.0-webfont.eot');src:url('lato_light_1.0-webfont.eot?#iefix') format('embedded-opentype'),url('lato_light_1.0-webfont.woff') format('woff'),url('lato_light_1.0-webfont.ttf') format('truetype'),url('lato_light_1.0-webfont.svg#latolight') format('svg');font-weight:normal;font-style:normal}@font-face{font-family:'Lato-Regular';src:url('lato_regular_1.0-webfont.eot');src:url('lato_regular_1.0-webfont.eot?#iefix') format('embedded-opentype'),url('lato_regular_1.0-webfont.woff') format('woff'),url('lato_regular_1.0-webfont.ttf') format('truetype'),url('lato_regular_1.0-webfont.svg#latoregular') format('svg');font-weight:normal;font-style:normal}@font-face{font-family:'Unverschaemt Sans';src:url('UnverschaemtSans.ttf') format('truetype');font-weight:normal;font-style:normal}
+@font-face{
+
+font-family:'Lato-Light';
+ src:url('lato_light_1.0-webfont.ttf') format('truetype');
+ font-weight:normal;
+ font-style:normal
+}
+@font-face{font-family:'Lato-Regular';
+
+src:url('lato_regular_1.0-webfont.ttf') format('truetype');
+ font-weight:normal;
+ font-style:normal
+}
+@font-face{
+
+font-family:'Unverschaemt Sans';
+ src:url('UnverschaemtSans.ttf') format('truetype');
+ font-weight:normal;
+ font-style:normal
+}
