--- a/layout/css/standard.css
+++ b/layout/css/standard.css
@@ -2,50 +2,52 @@
     margin: 0;
     padding: 0
 }
+body {
+    color: #6f6f6f;
+    width: 100%;
+    height: 100%;
+    font-size: 24px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -khtml-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    padding: 3% 20% 5%
+}
 code {
     font-size: 20px;
-    background-color: rgba(250, 250, 250, 1);
+    background-color: #fafafa;
     padding: 2px 4px;
     border: 1px solid #b4b4b4;
     border-radius: 3px;
     vertical-align: 1px
 }
-html {
-    background-color: white
+a {
+    text-decoration: none;
+    color: gray
 }
-::-webkit-scrollbar {
-    display: none
+a:hover {
+    color: #52525a
 }
 b {
-    font-family: "Lato-Regular";
+    font-family: Lato-Regular;
     font-weight: 500
 }
-a {
-    text-decoration: none
+section {
+    line-height: 27px;
+    font-family: Lato-Light;
+    text-transform: lowercase
 }
-body {
-    color: grey;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    font-size: 25px
+.unverschaemt-sans {
+    font-family: "Unverschaemt Sans"
 }
-.page {
-    width: 100%;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    padding: 0 15%
-}
-.megrim {
-    font-family: "Unverschaemt Sans";
-    display: inline-block
-}
-h1.megrim {
+h1 {
     color: #376e88;
-    font-size: 72px;
-    text-decoration: none;
+    font-size: 62px;
+    margin-bottom: 25px;
+    text-align: center;
+    display: block;
     font-weight: 300;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -54,44 +56,92 @@ h1.megrim {
     -ms-user-select: none;
     user-select: none
 }
+#portrait {
+    width: 160px;
+    height: 160px;
+    border: 1px solid #a7a7a7;
+    box-shadow: 0 0 0 #000;
+    display: block;
+    margin: 0 auto 20px
+}
+#portrait,
+#socials img {
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -khtml-border-radius: 50%;
+    -o-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%
+}
+#socials {
+    padding-top: 5px
+}
+#socials p {
+    display: none;
+    font-family: Lato-Light;
+    width: 200px;
+    font-size: 18px;
+    padding-top: 3px
+}
+#socials img {
+    width: 45px;
+    height: 45px;
+    -webkit-transition: all 100ms ease-in-out;
+    -moz-transition: all 100ms ease-in-out;
+    -khtml-transition: all 100ms ease-in-out;
+    -o-transition: all 100ms ease-in-out;
+    -ms-transition: all 100ms ease-in-out;
+    transition: all 100ms ease-in-out;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d
+}
+#socials img:hover {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg)
+}
+#behance:hover~#behance-text,
+#contact:hover~#contact-text,
+#facebook:hover~#facebook-text,
+#github:hover~#github-text,
+#instagram:hover~#instagram-text,
+#runkeeper:hover ~#runkeeper-text,
+#vcard:hover~#vcard-text,
+#xing:hover~#xing-text {
+    display: block
+}
+::-webkit-scrollbar {
+    display: none
+}
 .c1 {
-    color: rgba(55, 86, 136, 0.8)
+    color: rgba(55, 86, 136, .8)
 }
 .c2 {
-    color: rgba(49, 88, 129, 0.8)
+    color: rgba(49, 88, 129, .8)
 }
 .c3 {
-    color: rgba(55, 110, 136, 0.8)
+    color: rgba(55, 110, 136, .8)
 }
 .c4 {
-    color: rgba(55, 137, 147, 0.8)
+    color: rgba(55, 137, 147, .8)
 }
 .c5 {
-    color: rgba(56, 150, 132, 0.8)
+    color: rgba(56, 150, 132, .8)
 }
 .u1 {
-    border-bottom: 2px solid rgba(55, 86, 136, 0.8)
-}
-.u4 {
-    border-bottom: 2px solid rgba(55, 137, 147, 0.8);
+    border-bottom: 2px solid rgba(55, 137, 147, .8);
     margin-right: 0!important
 }
 .u1:hover {
-    border-bottom: 2px solid rgba(55, 86, 136, 1);
-    color: rgba(55, 86, 136, 1)
+    border-bottom: 2px solid #378993;
+    color: #378993
 }
-.u4:hover {
-    border-bottom: 2px solid rgba(55, 137, 147, 1);
-    color: rgba(55, 137, 147, 1)
-}
-.u1,
-.u4 {
+.u1 {
     cursor: pointer
 }
 .d1 {
-    margin-right: 6px
-}
-.d2 {
     line-height: 20px;
     margin-right: 0!important;
     vertical-align: 2px
@@ -101,212 +151,36 @@ h1.megrim {
 .c3,
 .c4,
 .c5,
-.u4,
-.u1,
 .d1,
-.d2,
-d3 {
+.u1 {
     display: inline
 }
 .c1,
 .c2,
 .c3,
 .c4,
-.c5,
-.d1 {
-    margin-right: 4px
+.c5 {
+    margin-right: 5px
 }
-a {
-    text-decoration: none;
-    color: grey
-}
-a:hover {
-    color: #52525a
-}
-#aboutme {
-    line-height: 21pt;
-    font-family: "Lato-Light";
-    text-transform: lowercase;
-}
-.text {
-    height: auto;
-    display: block;
-    padding: 2% 5%
-}
-.smartNav {
-    width: 60px;
-    height: 60px;
-    margin-bottom: 4px;
-    -webkit-transition: all 400ms ease-in-out;
-    -moz-transition: all 400ms ease-in-out;
-    -o-transition: all 400ms ease-in-out;
-    -ms-transition: all 400ms ease-in-out;
-    transition: all 400ms ease-in-out;
-    border-radius: 50%
-}
-.smartNav:hover {
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    transform: rotate(360deg);
-    cursor: pointer
-}
-.opacityZero {
-    opacity: 0.0
-}
-.button {
-    padding: 11px 19px 12px 19px;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -ms-border-radius: 50px;
-    -o-border-radius: 50px;
-    border-radius: 50px;
-    text-decoration: none;
-    border: 1px solid rgba(55, 110, 136, 0.4);
-    font-size: 21px;
-    display: inline-block;
-    margin-top: 5px
-}
-.button:hover {
-    cursor: pointer;
-    border-color: rgba(55, 110, 136, 0.8)
-}
-#portrait {
+@media(max-device-width:700px),(max-width:700px){
+
+#socials {
     width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    border: 1px solid rgba(100, 100, 100, 0.5);
-    box-shadow: 0 0 0 black
+    margin: auto
 }
-#facebookText,
-#behanceText,
-#instagramText,
-#xingText,
-#vcardText,
-#contactText {
-    display: none;
-    opacity: .8;
-    font-family: "Lato-Light";
-    width: 200px;
-    font-size: 21px;
-    padding-top: 6px
+body {
+    padding: 8% 10%
 }
-#facebook:hover ~ #facebookText,
-#contact:hover ~ #contactText,
-#behance:hover ~ #behanceText,
-#instagram:hover ~ #instagramText,
-#xing:hover ~ #xingText,
-#vcard:hover ~ #vcardText {
-    display: block
-}
-.transition-1000 {
-    -webkit-transition: all 1s ease-in-out;
-    -moz-transition: all 1s ease-in-out;
-    -o-transition: all 1s ease-in-out;
-    -ms-transition: all 1s ease-in-out;
-    transition: all 1s ease-in-out
-}
-@-webkit-keyframes scrollerToggle {
-    0% {
-        -ms-transform: translateY(0px);
-        -webkit-transform: translateY(0px);
-        transform: translateY(0px)
-    }
-    50% {
-        -ms-transform: translateY(-20px);
-        -webkit-transform: translateY(-20px);
-        transform: translateY(-20px)
-    }
-    100% {
-        -ms-transform: translateY(0px);
-        -webkit-transform: translateY(0px);
-        transform: translateY(0px)
-    }
-}
-@-moz-keyframes scrollerToggle {
-    0% {
-        -ms-transform: translateY(0px);
-        -webkit-transform: translateY(0px);
-        transform: translateY(0px)
-    }
-    50% {
-        -ms-transform: translateY(-20px);
-        -webkit-transform: translateY(-20px);
-        transform: translateY(-20px)
-    }
-    100% {
-        -ms-transform: translateY(0px);
-        -webkit-transform: translateY(0px);
-        transform: translateY(0px)
-    }
-}
-@-o-keyframes scrollerToggle {
-    0% {
-        -ms-transform: translateY(0px);
-        -webkit-transform: translateY(0px);
-        transform: translateY(0px)
-    }
-    50% {
-        -ms-transform: translateY(-20px);
-        -webkit-transform: translateY(-20px);
-        transform: translateY(-20px)
-    }
-    100% {
-        -ms-transform: translateY(0px);
-        -webkit-transform: translateY(0px);
-        transform: translateY(0px)
-    }
-}
-@keyframes scrollerToggle {
-    0% {
-        -ms-transform: translateY(0px);
-        -webkit-transform: translateY(0px);
-        transform: translateY(0px)
-    }
-    50% {
-        -ms-transform: translateY(-20px);
-        -webkit-transform: translateY(-20px);
-        transform: translateY(-20px)
-    }
-    100% {
-        -ms-transform: translateY(0px);
-        -webkit-transform: translateY(0px);
-        transform: translateY(0px)
-    }
-}
-#scrollArrow {
-    -webkit-animation: scrollerToggle 1s infinite;
-    -moz-animation: scrollerToggle 1s infinite;
-    -o-animation: scrollerToggle 1s infinite;
-    animation: scrollerToggle 1s infinite;
-    -webkit-transition: all 2s ease-in-out;
-    -moz-transition: all 2s ease-in-out;
-    -o-transition: all 2s ease-in-out;
-    -ms-transition: all 2s ease-in-out;
-    transition: all 2s ease-in-out;
-    width: 60px;
-    height: 60px;
-    position: fixed;
-    opacity: .0;
-    bottom: 10px;
-    right: 10px;
-    z-index: 400
-}
-@media(max-device-width:700px),(max-width:700px){#socials{width:200px;margin:auto}}@media(max-device-width:600px),(max-width:600px){.page{padding:0 2%
-}
-h1.megrim {
+h1 {
     font-size: 50px
 }
-#facebook:hover ~ #facebookText,
-#contact:hover ~ #contactText,
-#behance:hover ~ #behanceText,
-#instagram:hover ~ #instagramText,
-#xing:hover ~ #xingText,
-#vcard:hover ~ #vcardText {
-    display: none
+#socials p {
+    display: none!important
 }
-#scrollArrow {
-    display: none
+}
+@media(min-device-width:1400px),(min-width:1400px){
+
+body {
+    padding: 8% 25%
 }
 }
