--- a/layout/css/standard.css
+++ b/layout/css/standard.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0
 }
+
 body {
     color: #6f6f6f;
     width: 100%;
@@ -15,35 +16,38 @@ body {
     -ms-box-sizing: border-box;
     padding: 3% 20% 5%
 }
-code {
-    font-size: 20px;
-    background-color: #fafafa;
-    padding: 2px 4px;
-    border: 1px solid #b4b4b4;
-    border-radius: 3px;
-    vertical-align: 1px
-}
+
 a {
     text-decoration: none;
-    color: gray
+    color: #9a9a9a;
+    border-bottom: 1px solid #9a9a9a
 }
+
 a:hover {
-    color: #52525a
+    color: #52525a;
+    border-width: 2px
 }
+
+a.unverschaemt-sans {
+    border: none
+}
+
 b {
     font-family: Lato-Regular;
     font-weight: 500
 }
+
 section {
     line-height: 27px;
-    font-family: Lato-Light;
-    text-transform: lowercase
+    font-family: Lato-Light
 }
+
 .unverschaemt-sans {
     font-family: "Unverschaemt Sans"
 }
+
 h1 {
-    color: #376e88;
+    color: #5d5d5d;
     font-size: 62px;
     margin-bottom: 25px;
     text-align: center;
@@ -56,14 +60,16 @@ h1 {
     -ms-user-select: none;
     user-select: none
 }
+
 #portrait {
     width: 160px;
     height: 160px;
-    border: 1px solid #a7a7a7;
-    box-shadow: 0 0 0 #000;
+    border: 7px solid #fff;
+    box-shadow: 0 0 2px #000;
     display: block;
     margin: 0 auto 20px
 }
+
 #portrait,
 #socials img {
     -webkit-border-radius: 50%;
@@ -73,9 +79,16 @@ h1 {
     -ms-border-radius: 50%;
     border-radius: 50%
 }
+
 #socials {
-    padding-top: 5px
+    padding-top: 5px;
+    text-align: center
 }
+
+#socials a {
+    border: none
+}
+
 #socials p {
     display: none;
     font-family: Lato-Light;
@@ -83,6 +96,7 @@ h1 {
     font-size: 18px;
     padding-top: 3px
 }
+
 #socials img {
     width: 45px;
     height: 45px;
@@ -95,6 +109,7 @@ h1 {
     -webkit-backface-visibility: hidden;
     -webkit-transform-style: preserve-3d
 }
+
 #socials img:hover {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
@@ -102,85 +117,35 @@ h1 {
     -ms-transform: rotate(45deg);
     transform: rotate(45deg)
 }
-#behance:hover~#behance-text,
-#contact:hover~#contact-text,
-#facebook:hover~#facebook-text,
-#github:hover~#github-text,
-#instagram:hover~#instagram-text,
-#runkeeper:hover ~#runkeeper-text,
-#vcard:hover~#vcard-text,
-#xing:hover~#xing-text {
-    display: block
-}
+
 ::-webkit-scrollbar {
     display: none
 }
-.c1 {
-    color: rgba(55, 86, 136, .8)
-}
-.c2 {
-    color: rgba(49, 88, 129, .8)
-}
-.c3 {
-    color: rgba(55, 110, 136, .8)
-}
-.c4 {
-    color: rgba(55, 137, 147, .8)
-}
-.c5 {
-    color: rgba(56, 150, 132, .8)
-}
-.u1 {
-    border-bottom: 2px solid rgba(55, 137, 147, .8);
-    margin-right: 0!important
-}
-.u1:hover {
-    border-bottom: 2px solid #378993;
-    color: #378993
-}
-.u1 {
-    cursor: pointer
-}
-.d1 {
-    line-height: 20px;
-    margin-right: 0!important;
-    vertical-align: 2px
-}
-.c1,
-.c2,
-.c3,
-.c4,
-.c5,
-.d1,
-.u1 {
-    display: inline
-}
-.c1,
-.c2,
-.c3,
-.c4,
-.c5 {
-    margin-right: 5px
-}
-@media(max-device-width:700px),(max-width:700px){
 
-#socials {
-    width: 200px;
-    margin: auto
+@media(max-device-width:700px),
+(max-width:700px) {
+    #socials {
+        width: 220px;
+        margin: auto
+    }
+    #socials img {
+        width: 50px;
+        height: 50px
+    }
+    body {
+        padding: 8% 10%
+    }
+    h1 {
+        font-size: 50px
+    }
+    #socials p {
+        display: none!important
+    }
 }
-body {
-    padding: 8% 10%
-}
-h1 {
-    font-size: 50px
-}
-#socials p {
-    display: none!important
-}
-}
-@media(min-device-width:1400px),(min-width:1400px){
 
-body {
-    padding: 8% 25%
-}
+@media(min-device-width:1400px),
+(min-width:1400px) {
+    body {
+        padding: 8% 25%
+    }
 }
