--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Unverschaemt Sans';
+    src: url(../res/font/UnverschaemtSans.ttf) format('truetype');
+    font-weight: 400;
+    font-style: normal
+}
+
 * {
     margin: 0;
     padding: 0
@@ -8,13 +15,19 @@ body {
     width: 100%;
     height: 100%;
     font-size: 24px;
-    box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -khtml-box-sizing: border-box;
     -o-box-sizing: border-box;
     -ms-box-sizing: border-box;
-    padding: 3% 20% 5%
+    box-sizing: border-box;
+    padding: 3% 20% 5%;
+    font-family: Lato;
+    font-weight: 300
+}
+
+.unverschaemt-sans {
+    font-family: "Unverschaemt Sans"
 }
 
 a {
@@ -25,7 +38,7 @@ a {
 
 a:hover {
     color: #52525a;
-    border-width: 2px
+    border-bottom-width: 2px
 }
 
 a.unverschaemt-sans {
@@ -33,17 +46,11 @@ a.unverschaemt-sans {
 }
 
 b {
-    font-family: Lato-Regular;
-    font-weight: 500
+    font-weight: 400
 }
 
 section {
-    line-height: 27px;
-    font-family: Lato-Light
-}
-
-.unverschaemt-sans {
-    font-family: "Unverschaemt Sans"
+    line-height: 27px
 }
 
 h1 {
@@ -52,13 +59,7 @@ h1 {
     margin-bottom: 25px;
     text-align: center;
     display: block;
-    font-weight: 300;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none
+    font-weight: 300
 }
 
 #portrait {
@@ -71,7 +72,7 @@ h1 {
 }
 
 #portrait,
-#socials img {
+footer img {
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -khtml-border-radius: 50%;
@@ -80,24 +81,16 @@ h1 {
     border-radius: 50%
 }
 
-#socials {
+footer {
     padding-top: 5px;
     text-align: center
 }
 
-#socials a {
+footer a {
     border: none
 }
 
-#socials p {
-    display: none;
-    font-family: Lato-Light;
-    width: 200px;
-    font-size: 18px;
-    padding-top: 3px
-}
-
-#socials img {
+footer img {
     width: 45px;
     height: 45px;
     -webkit-transition: all 100ms ease-in-out;
@@ -110,12 +103,23 @@ h1 {
     -webkit-transform-style: preserve-3d
 }
 
-#socials img:hover {
+footer img:hover {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg)
+}
+
+footer a,
+footer img,
+h1 {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
 }
 
 ::-webkit-scrollbar {
@@ -124,11 +128,11 @@ h1 {
 
 @media(max-device-width:700px),
 (max-width:700px) {
-    #socials {
+    footer {
         width: 220px;
         margin: auto
     }
-    #socials img {
+    footer img {
         width: 50px;
         height: 50px
     }
@@ -137,9 +141,6 @@ h1 {
     }
     h1 {
         font-size: 50px
-    }
-    #socials p {
-        display: none!important
     }
 }
 
