--- a/css/style.css
+++ b/css/style.css
@@ -1,151 +1,138 @@
 @font-face {
-    font-family: 'Unverschaemt Sans';
-    src: url(../res/font/UnverschaemtSans.ttf) format('truetype');
-    font-weight: 400;
-    font-style: normal
+  font-family: 'Unverschaemt Sans';
+  src: url(../res/font/UnverschaemtSans.ttf) format('truetype');
+  font-weight: 400;
+  font-style: normal
 }
 
 * {
-    margin: 0;
-    padding: 0
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
 }
+
+body, html {
+  width: 100%;
+}
+
 body {
-    color: #6f6f6f;
-    width: 100%;
-    height: 100%;
-    font-size: 24px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -khtml-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 3% 20% 5%;
-    font-family: Lato;
-    font-weight: 300
+  color: #6f6f6f;
+  font-size: 20px;
+  padding: 4%;
+  max-width: 1000px;
+  font-family: Lato;
+  font-weight: 300
 }
 
 .unverschaemt-sans {
-    font-family: "Unverschaemt Sans"
+  font-family: "Unverschaemt Sans"
 }
 
 a {
-    text-decoration: none;
-    color: #9a9a9a;
-    border-bottom: 1px solid #9a9a9a
+  text-decoration: none;
+  color: #9a9a9a;
+  border-bottom: 1px solid #9a9a9a
 }
 
 a:hover {
-    color: #52525a;
-    border-bottom-width: 2px
+  color: #52525a;
+  border-bottom-width: 2px
 }
 
 a.unverschaemt-sans {
-    border: none
+  border: none
 }
 
 b {
-    font-weight: 400
+  font-weight: 400
 }
 
 section {
-    line-height: 27px
+  line-height: 28px
 }
 
 h1 {
-    color: #5d5d5d;
-    font-size: 62px;
-    margin-bottom: 25px;
-    text-align: center;
-    display: block;
-    font-weight: 300
+  color: #5d5d5d;
+  font-size: 50px;
+  margin-bottom: 20px;
+  font-weight: 300
 }
 
-#portrait {
-    width: 160px;
-    height: 160px;
-    border: 7px solid #fff;
-    box-shadow: 0 0 2px #000;
-    display: block;
-    margin: 0 auto 20px
+h3 {
+  color: #5d5d5d;
+  font-size: 27px;
+  margin-bottom: 5px;
+  font-weight: 300
 }
 
-#portrait,
 footer img {
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -khtml-border-radius: 50%;
-    -o-border-radius: 50%;
-    -ms-border-radius: 50%;
-    border-radius: 50%
-}
-
-footer {
-    padding-top: 5px;
-    text-align: center
+  border-radius: 50%
 }
 
 footer a {
-    border: none
+  border: none
 }
 
 footer img {
-    width: 45px;
-    height: 45px;
-    -webkit-transition: all 100ms ease-in-out;
-    -moz-transition: all 100ms ease-in-out;
-    -khtml-transition: all 100ms ease-in-out;
-    -o-transition: all 100ms ease-in-out;
-    -ms-transition: all 100ms ease-in-out;
-    transition: all 100ms ease-in-out;
-    -webkit-backface-visibility: hidden;
-    -webkit-transform-style: preserve-3d
+  width: 42px;
+  height: 42px;
+  -webkit-transition: all 100ms ease-in-out;
+  -moz-transition: all 100ms ease-in-out;
+  -ms-transition: all 100ms ease-in-out;
+  transition: all 100ms ease-in-out;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d
 }
 
 footer img:hover {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg)
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg)
 }
 
 footer a,
 footer img,
 h1 {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none
 }
 
 ::-webkit-scrollbar {
-    display: none
+  display: none
 }
 
-@media(max-device-width:700px),
-(max-width:700px) {
-    footer {
-        width: 220px;
-        margin: auto
-    }
-    footer img {
-        width: 50px;
-        height: 50px
-    }
-    body {
-        padding: 8% 10%
-    }
-    h1 {
-        font-size: 50px
-    }
+@media (max-device-width:600px), (max-width:600px) {
+  footer {
+    width: 220px;
+    margin: auto;
+    text-align: center;
+    padding-bottom: 20px;
+  }
+
+  footer img {
+    width: 50px;
+    height: 50px
+  }
+
+  body {
+    padding: 5%
+  }
+
+  h1 {
+    font-size: 40px;
+    text-align: center
+  }
 }
 
-@media(min-device-width:1400px),
-(min-width:1400px) {
-    body {
-        padding: 8% 25%
-    }
+@media (min-device-width:1400px), (min-width:1400px) {
+  body {
+    padding: 8%
+  }
 }
